--- a/style.css
+++ b/style.css
@@ -64,3 +64,20 @@ html {
     transform: rotate(360deg);
   }
 }
+
+button {
+  font-family: 'Roboto Slab', serif;
+  /*min-width: 150px;*/
+  /* max-width: 300px; */
+  margin: 2%;
+  padding: 4% 11%;
+  font-size: 1.2rem;
+  font-weight: bolder;
+}
+
+.getReady {
+  font-size: 15rem;
+  margin-top: 10%;
+  min-height: 0;
+  animation: fadein 1s;
+}
