--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ html {
   margin: -60px 0 0 -60px;
 }
 
-.image {
+.roulette-image {
   position: absolute;
   top: 30%;
   left: 30%;
@@ -66,18 +66,17 @@ html {
 }
 
 button {
-  font-family: 'Roboto Slab', serif;
-  /*min-width: 150px;*/
-  /* max-width: 300px; */
   margin: 2%;
-  padding: 4% 11%;
+  padding: 5% 5%;
   font-size: 1.2rem;
   font-weight: bolder;
 }
 
-.getReady {
-  font-size: 15rem;
-  margin-top: 10%;
-  min-height: 0;
-  animation: fadein 1s;
+h1 {
+  font-weight: bolder;
+  font-size: 3rem;
+  width: 100%;
+  min-height: 2em;
+  top: 30%;
+  left: 30%;
 }
