--- a/style.css
+++ b/style.css
@@ -16,6 +16,16 @@ html {
   font-size: 30px
 }
 
+.answers {
+  position: absolute;
+  top: 50%;
+  left: 38%;
+  width: 200px;
+  height: 200px;
+  margin: -60px 0 0 -60px;
+  color: white
+}
+
 .icon {
   position: absolute;
   top: 30%;
